# 3-python-package-ejsm

./: Pipfile  README.md  example.py  logic.md  pyproject.toml  setup.py  test.ipynb
.github/workflows/: build.yaml
passgenpy/: __init__.py  __main__.py  core.py
passgenpyNYU/: __main__.py  core.py
password_generator/: __init__.py  __main__.py  core.py
reader/: __init__.py  core.py
tests/: test_core.py
